--- a/app/src/main/res/layout/fragment_detail_recipe.xml
+++ b/app/src/main/res/layout/fragment_detail_recipe.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            tools:context="com.udacity.backingapp.DetailRecipeFragment">
+            tools:context="com.udacity.backingapp.ui.DetailRecipeFragment">
 
 
             <FrameLayout
