--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -4,7 +4,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.udacity.backingapp.RecipeFragment">
+        tools:context="com.udacity.backingapp.ui.RecipeFragment">
 
         <android.support.v7.widget.RecyclerView
             android:background="@color/colorPrimaryLight"
