finish configuration widget

--- a/app/src/main/res/xml/recipe_widget_info.xml
+++ b/app/src/main/res/xml/recipe_widget_info.xml
@@ -2,8 +2,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/recipe_widget"
     android:initialLayout="@layout/recipe_widget"
-    android:minHeight="150dp"
-    android:minWidth="150dp"
+    android:configure="com.udacity.backingapp.WidgetConfigureActivity"
+    android:minHeight="250dp"
+    android:minWidth="250dp"
     android:previewImage="@mipmap/icon"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
