--- a/app/src/main/res/layout/recipe_widget.xml
+++ b/app/src/main/res/layout/recipe_widget.xml
@@ -1,21 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
+    android:background="@color/colorPrimary"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="@dimen/widget_margin">
 
     <TextView
-        android:id="@+id/appwidget_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:background="#09C"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:textColor="@color/colorPrimaryDark"
+        tools:text="Recipe Name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:id="@+id/tv_widget_recipe_name" />
+
+    <TextView
+        android:id="@+id/tv_widget_ingredient"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_widget_recipe_name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        tools:text="Ingredients" />
 
 </RelativeLayout>
