--- a/app/src/main/res/layout-sw600dp/recipe_item.xml
+++ b/app/src/main/res/layout-sw600dp/recipe_item.xml
@@ -2,18 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="150dp"
-    android:layout_margin="5dp"
-    android:background="@drawable/recipe_drawable"
-    tools:layout_editor_absoluteY="81dp">
+    android:layout_width="@dimen/three_hundred"
+    android:layout_height="@dimen/hundred_fifty"
+    android:layout_margin="@dimen/five"
+    android:background="@drawable/recipe_drawable">
 
     <ImageView
         android:id="@+id/iv_recipe_item_image"
-        android:layout_width="142dp"
-        android:layout_height="130dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="@dimen/hundred_forty"
+        android:layout_height="@dimen/hundred_thirty"
+        android:layout_marginEnd="@dimen/eight"
+        android:layout_marginTop="@dimen/eight"
         android:adjustViewBounds="true"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,12 +22,12 @@
         android:id="@+id/tv_recipe_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/eight"
+        android:layout_marginTop="@dimen/eight"
         android:fontFamily="@font/josefinsans"
-        android:text="TITLE"
+        android:text="@string/title"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="24sp"
+        android:textSize="@dimen/twenty_four"
         android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,20 +36,20 @@
         android:id="@+id/tv_recipe_item_servangs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="34dp"
-        android:layout_marginEnd="60dp"
-        android:text="8"
-        android:textSize="18sp"
+        android:layout_marginBottom="@dimen/thirty_four"
+        android:layout_marginEnd="@dimen/sixty"
+        tools:text="8"
+        android:textSize="@dimen/eighteen"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/iv_recipe_item_image" />
 
     <ImageView
         android:id="@+id/textView3"
-        android:layout_width="48dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="@dimen/forty_eight"
+        android:layout_height="@dimen/forty_three"
+        android:layout_marginStart="@dimen/twenty_four"
+        android:layout_marginTop="@dimen/forty"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_recipe_item_title"
         app:srcCompat="@drawable/ic_person_24dp" />
