--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -2,23 +2,22 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="250dp"
-    android:layout_height="150dp"
-    android:layout_margin="5dp"
-    android:background="@drawable/recipe_drawable"
-    tools:layout_editor_absoluteY="81dp">
+    android:layout_width="@dimen/two_hundred_fifty"
+    android:layout_height="@dimen/hundred_fifty"
+    android:layout_margin="@dimen/five"
+    android:background="@drawable/recipe_drawable">
 
     <TextView
         android:id="@+id/tv_ingreient_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="@dimen/eight"
+        android:layout_marginTop="@dimen/four"
         android:fontFamily="@font/josefinsans"
-        android:text="Ingredient"
+        android:text="@string/ingredient"
         android:textAlignment="viewStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="18sp"
+        android:textSize="@dimen/eighteen"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,9 +27,10 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="Measure :"
+        android:layout_marginStart="@dimen/eight"
+        android:layout_marginTop="@dimen/sixteen"
+        android:textColor="@color/colorIngredient"
+        android:text="@string/measure"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_ingreient_item" />
@@ -39,9 +39,10 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:text="Quantity :"
+        android:layout_marginStart="@dimen/eight"
+        android:layout_marginTop="@dimen/twenty_four"
+        android:textColor="@color/colorIngredient"
+        android:text="@string/quantity"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -50,9 +51,9 @@
         android:id="@+id/tv_measure_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="20dp"
-        android:text="TSP"
+        android:layout_marginStart="@dimen/forty_eight"
+        android:layout_marginTop="@dimen/twenty"
+        tools:text="TSP"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/tv_ingreient_item" />
@@ -61,9 +62,9 @@
         android:id="@+id/tv_quantity_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="30dp"
-        android:text="5.6"
+        android:layout_marginStart="@dimen/fifty_three"
+        android:layout_marginTop="@dimen/thirty"
+        tools:text="5.6"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/tv_measure_item" />
