--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -14,17 +14,17 @@
             <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                 android:id="@+id/player_view"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="@dimen/two_hundred"
                 android:focusable="true" />
 
             <TextView
                 android:id="@+id/tv_main_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="@dimen/eight"
+                android:layout_marginTop="@dimen/twenty_four"
                 android:fontFamily="@font/josefinsans"
-                android:text="Description"
+                android:text="@string/description"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,9 +34,9 @@
                 android:id="@+id/tv_detail_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:text="that is desction indetail"
+                android:layout_marginStart="@dimen/eight"
+                android:layout_marginTop="@dimen/sixteen"
+                tools:text="that is desction indetail"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_main_desc" />
