--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,26 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="three_hundred">300dp</dimen>
+    <dimen name="eight">8dp</dimen>
+    <dimen name="hundred_thirty">130dp</dimen>
+    <dimen name="hundred_forty">142dp</dimen>
+    <dimen name="twenty_four">24sp</dimen>
+    <dimen name="eighteen">18sp</dimen>
+    <dimen name="sixty">60dp</dimen>
+    <dimen name="thirty_four">34dp</dimen>
+    <dimen name="forty">40dp</dimen>
+    <dimen name="forty_eight">48dp</dimen>
+    <dimen name="forty_three">43dp</dimen>
+    <dimen name="five">5dp</dimen>
+    <dimen name="hundred_fifty">150dp</dimen>
+    <dimen name="two_hundred">200dp</dimen>
+    <dimen name="ten">10dp</dimen>
+    <dimen name="sixteen">16dp</dimen>
+    <dimen name="thirty">30dp</dimen>
+    <dimen name="fifty_six">56dp</dimen>
+    <dimen name="two_hundred_fifty">250dp</dimen>
+    <dimen name="four">4dp</dimen>
+    <dimen name="twenty">20dp</dimen>
+    <dimen name="fifty_three">53dp</dimen>
 </resources>
