Enhance UI in packages

--- a/app/src/main/res/layout-sw600dp/fragment_recipe.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_recipe.xml
@@ -11,7 +11,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/two_hundred"
-            tools:context="com.udacity.backingapp.ui.RecipeFragment">
+            tools:context="com.udacity.backingapp.ui.fragment.RecipeFragment">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_recipe_list"
