--- a/app/src/main/res/layout/main_recipes_list.xml
+++ b/app/src/main/res/layout/main_recipes_list.xml
@@ -7,7 +7,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.udacity.backingapp.ui.MainRecipesList">
+        tools:context="com.udacity.backingapp.ui.activity.MainRecipesList">
 
     </FrameLayout>
 </layout>
