--- a/app/src/main/res/layout/fragment_detail_recipe.xml
+++ b/app/src/main/res/layout/fragment_detail_recipe.xml
@@ -9,7 +9,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context="com.udacity.backingapp.ui.DetailRecipeFragment">
+            tools:context="com.udacity.backingapp.ui.fragment.DetailRecipeFragment">
 
 
             <FrameLayout
