--- a/app/src/main/res/xml/recipe_widget_info.xml
+++ b/app/src/main/res/xml/recipe_widget_info.xml
@@ -2,7 +2,7 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/recipe_widget"
     android:initialLayout="@layout/recipe_widget"
-    android:configure="com.udacity.backingapp.WidgetConfigureActivity"
+    android:configure="com.udacity.backingapp.ui.widget.WidgetConfigureActivity"
     android:minHeight="250dp"
     android:minWidth="250dp"
     android:previewImage="@mipmap/icon"
