--- a/app/src/main/res/layout/main_recipes_list.xml
+++ b/app/src/main/res/layout/main_recipes_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/mainContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.udacity.backingapp.ui.activity.MainRecipesList">
