--- a/app/src/main/res/layout/activity_detail_recipe.xml
+++ b/app/src/main/res/layout/activity_detail_recipe.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/detailRecipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <FrameLayout
-            android:id="@+id/detailContainer"
+            android:id="@+id/detailRecipeContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.udacity.backingapp.ui.activity.DetailRecipe" />
