--- a/app/src/main/res/layout/fragment_detail_recipe.xml
+++ b/app/src/main/res/layout/fragment_detail_recipe.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/eight"
-                android:layout_marginTop="@dimen/thirty_four"
+                android:layout_marginTop="@dimen/eight"
                 android:fontFamily="@font/josefinsans"
                 android:text="@string/ingredients"
                 android:textAlignment="viewStart"
@@ -53,7 +53,6 @@
                 android:id="@+id/rv_ingredients"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/eight"
                 android:background="@color/colorPrimaryLight"
                 android:visibility="visible"
                 app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +62,6 @@
                 android:id="@+id/rv_steps"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/eight"
                 android:background="@color/colorPrimaryLight"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
