--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
+        android:id="@+id/scroll_step"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -22,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/eight"
-                android:layout_marginTop="@dimen/twenty_four"
+                android:layout_marginTop="@dimen/eight"
                 android:fontFamily="@font/josefinsans"
                 android:text="@string/description"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -36,10 +37,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/eight"
                 android:layout_marginTop="@dimen/sixteen"
-                tools:text="that is desction indetail"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_main_desc" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_main_desc"
+                tools:text="that is desction indetail" />
 
 
         </android.support.constraint.ConstraintLayout>
