--- a/app/src/main/res/layout/step_item.xml
+++ b/app/src/main/res/layout/step_item.xml
@@ -7,6 +7,10 @@
     android:background="@drawable/recipe_drawable"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <ImageView
+        android:id="@+id/iv_thumb_step"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     <TextView
         android:id="@+id/tv_step_item_id"
         android:layout_width="wrap_content"
