--- a/app/src/main/res/layout-land/recipe_item.xml
+++ b/app/src/main/res/layout-land/recipe_item.xml
@@ -5,8 +5,7 @@
     android:layout_width="@dimen/three_hundred"
     android:layout_height="@dimen/hundred_fifty"
     android:layout_margin="@dimen/five"
-    android:background="@drawable/recipe_drawable"
-    tools:layout_editor_absoluteY="81dp">
+    android:background="@drawable/recipe_drawable">
 
     <ImageView
         android:id="@+id/iv_recipe_item_image"
@@ -37,8 +36,8 @@
         android:id="@+id/tv_recipe_item_servangs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="34dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="@dimen/thirty_four"
+        android:layout_marginEnd="@dimen/sixty"
         tools:text="8"
         android:textSize="@dimen/eighteen"
         android:textStyle="bold"
