--- a/app/src/main/res/layout-sw600dp/activity_detail_recipe.xml
+++ b/app/src/main/res/layout-sw600dp/activity_detail_recipe.xml
@@ -10,9 +10,9 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/stepsListContainer"
-            android:layout_width="200dp"
+            android:layout_width="@dimen/two_hundred"
             android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="@dimen/forty"
             android:background="@color/colorPrimaryLight"
             app:layout_constraintTop_toBottomOf="@+id/textView7"
             tools:context="com.udacity.backingapp.ui.activity.DetailRecipe">
@@ -21,26 +21,24 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/ingredientsListContainer"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/zero"
             android:layout_height="wrap_content"
             android:layout_marginBottom="28dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/twenty_four"
             android:background="@color/colorPrimaryLight"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.51"
             app:layout_constraintStart_toEndOf="@+id/stepsListContainer">
 
         </android.support.v7.widget.RecyclerView>
 
         <FrameLayout
             android:id="@+id/stepDetailContainer"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/zero"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginEnd="@dimen/eight"
+            android:layout_marginTop="@dimen/forty"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/stepsListContainer"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -50,7 +48,7 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/eight"
             android:fontFamily="@font/josefinsans"
             android:text="@string/steps"
             android:textAlignment="viewStart"
@@ -63,8 +61,8 @@
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginBottom="@dimen/thirty_four"
+            android:layout_marginStart="@dimen/eight"
             android:fontFamily="@font/josefinsans"
             android:text="@string/ingredients"
             android:textAlignment="viewStart"
