--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,5 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     <dimen name="four">4dp</dimen>
     <dimen name="twenty">20dp</dimen>
     <dimen name="fifty_three">53dp</dimen>
+    <dimen name="zero">0dp</dimen>
 </resources>
